Overflow When Hidden Fix

--- a/src/css/bmalert.less
+++ b/src/css/bmalert.less
@@ -35,6 +35,7 @@
     display: none;
     width: 0;
     height: 0;
+    overflow: hidden;
 }
 
 .bmalert-hide
